--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.1.0",
   "author": "blueshen <zhiyi.shen@gmail.com>",
   "description": "a sample for karma and mocha",
-  "contributors": [ 
+  "contributors": [
     {
       "name": "shenyanchao",
       "email": "zhiyi.shen@gmail.com"
-    } 
+    }
   ],
   "repository": {
     "type": "git",
@@ -19,19 +19,21 @@
     "mocha",
     "testacular"
   ],
-  "dependencies" : {
-    "colors"   :  "*",
-    "karma" : "0.9.5",
-    "karma-mocha" :  "0.0.4",
-    "karma-coverage" :  "0.0.4",
-    "karma-junit-reporter"    :  "0.0.2",
-    "karma-chrome-launcher" :  "0.0.2",
-    "karma-firefox-launcher" :  "0.0.3",
-    "chai" : "1.5.0"
+  "dependencies": {
+    "chai": "^1.9.1",
+    "colors": "^0.6.2",
+    "karma": "^0.12.22",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-coverage": "^0.2.6",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-junit-reporter": "^0.2.2",
+    "karma-mocha": "^0.1.8",
+    "mocha": "^1.21.4"
   },
-  "analyze": false, 
+  "analyze": false,
   "license": "MIT",
   "engines": {
-    "node": ">=0.8.20"
+    "node": ">=0.10.28",
+    "npm": ">=1.4.9"
   }
 }
