--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js
 node_js:
   - 0.10.28
-addons:
-  firefox: "31.0"
-before_script:
-  - npm install
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 
 script:
   - node_modules/karma/bin/karma start --browsers=Firefox
